--- a/partials/dialog.html
+++ b/partials/dialog.html
@@ -32,7 +32,7 @@
                               name="messageBody" ng-model="messageText" title="Your test"
                               ></textarea>
                 </div>
-                <input type="submit" value="Send" ng-class="['btn btn-primary', dialogForm.$valid ? '' : 'disabled']">
+                <input type="submit" value="Enviar" ng-class="['btn btn-primary', dialogForm.$valid ? '' : 'disabled']">
             </form>
         </div>
     </div>
